@@ -13,6 +13,9 @@ Version 2.2.10
    - Bugfix: Handling of message sequence numbers when using IMAP4 (thanks to
         Jan Outrata for providing a patch; this was debian bug #472080)
    - Added Jan Outrata to contributors
+   - Bugfix: Not all RFC2047 compliant header lines were parsed correctly
+        (thanks to Andre Klitzing for reporting the bug as #1924467 and for
+        providing a patch; this is ubuntu bug #204640)
 	
 Version 2.2.9		2008-02-03 17:48
  * Robert Sowada
